baml_language/crates/baml_tests/snapshots/diagnostic_errors/void_return_type/baml_tests__diagnostic_errors__void_return_type__02_parser__function_type_throws.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  TYPE_ALIAS_DEF
    WORD "type"
    WORD "ExplicitHandler"
    EQUALS "="
    TYPE_EXPR
      L_PAREN "("
      FUNCTION_TYPE_PARAM
        WORD "value"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
      ARROW "->"
      TYPE_EXPR "string"
        WORD "string"
      THROWS_CLAUSE
        KW_THROWS "throws"
        TYPE_EXPR "never"
          WORD "never"
  TYPE_ALIAS_DEF
    WORD "type"
    WORD "ImplicitHandler"
    EQUALS "="
    TYPE_EXPR
      L_PAREN "("
      FUNCTION_TYPE_PARAM
        WORD "value"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
      ARROW "->"
      TYPE_EXPR "string"
        WORD "string"
  TYPE_ALIAS_DEF
    WORD "type"
    WORD "HiddenHandler"
    EQUALS "="
    TYPE_EXPR
      L_PAREN "("
      FUNCTION_TYPE_PARAM
        WORD "value"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
      ARROW "->"
      TYPE_EXPR "string"
        WORD "string"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "run_explicit"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "handler"
        COLON ":"
        TYPE_EXPR "ExplicitHandler"
          WORD "ExplicitHandler"
      COMMA ","
      PARAMETER
        WORD "value"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          WORD "handler"
          CALL_ARGS "(value)"
            L_PAREN "("
            WORD "value"
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "run_implicit"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "handler"
        COLON ":"
        TYPE_EXPR "ImplicitHandler"
          WORD "ImplicitHandler"
      COMMA ","
      PARAMETER
        WORD "value"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          WORD "handler"
          CALL_ARGS "(value)"
            L_PAREN "("
            WORD "value"
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "forward_direct"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "handler"
        COLON ":"
        TYPE_EXPR
          L_PAREN "("
          FUNCTION_TYPE_PARAM
            WORD "value"
            COLON ":"
            TYPE_EXPR "int"
              WORD "int"
          R_PAREN ")"
          ARROW "->"
          TYPE_EXPR "string"
            WORD "string"
      COMMA ","
      PARAMETER
        WORD "value"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          WORD "handler"
          CALL_ARGS "(value)"
            L_PAREN "("
            WORD "value"
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "forward_optional"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "handler"
        COLON ":"
        TYPE_EXPR
          L_PAREN "("
          FUNCTION_TYPE_PARAM
            TYPE_EXPR
              L_PAREN "("
              FUNCTION_TYPE_PARAM
                WORD "value"
                COLON ":"
                TYPE_EXPR "int"
                  WORD "int"
              R_PAREN ")"
              ARROW "->"
              TYPE_EXPR "string"
                WORD "string"
          R_PAREN ")"
          QUESTION "?"
      COMMA ","
      PARAMETER
        WORD "value"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string?"
      WORD "string"
      QUESTION "?"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        OPTIONAL_CALL_EXPR
          WORD "handler"
          QUESTION_DOT "?."
          CALL_ARGS "(value)"
            L_PAREN "("
            WORD "value"
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "run_hidden"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "handler"
        COLON ":"
        TYPE_EXPR "HiddenHandler"
          WORD "HiddenHandler"
      COMMA ","
      PARAMETER
        WORD "value"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          WORD "handler"
          CALL_ARGS "(value)"
            L_PAREN "("
            WORD "value"
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "return_closure"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "handler"
        COLON ":"
        TYPE_EXPR
          L_PAREN "("
          FUNCTION_TYPE_PARAM
            WORD "value"
            COLON ":"
            TYPE_EXPR "int"
              WORD "int"
          R_PAREN ")"
          ARROW "->"
          TYPE_EXPR "string"
            WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR
      L_PAREN "("
      FUNCTION_TYPE_PARAM
        WORD "value"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
      ARROW "->"
      TYPE_EXPR "string"
        WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        RETURN_STMT
          KW_RETURN "return"
          LAMBDA_EXPR
            PARAMETER_LIST
              L_PAREN "("
              PARAMETER
                WORD "value"
                COLON ":"
                TYPE_EXPR "int"
                  WORD "int"
              R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "string"
              WORD "string"
            BLOCK_EXPR
              L_BRACE "{"
              CALL_EXPR
                WORD "handler"
                CALL_ARGS "(value)"
                  L_PAREN "("
                  WORD "value"
                  R_PAREN ")"
              R_BRACE "}"
        R_BRACE "}"

=== ERRORS ===
None
