baml_language/crates/baml_tests/snapshots/diagnostic_errors/void_return_type/baml_tests__diagnostic_errors__void_return_type__02_parser__void_type_position_errors.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 39980
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "bad_param"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "x"
        COLON ":"
        TYPE_EXPR "void"
          WORD "void"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR "{
  1
}"
        L_BRACE "{"
        INTEGER_LITERAL "1"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "bad_let"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            CHAIN_PATTERN
              BINDING_PATTERN "let x"
                KW_LET "let"
                WORD "x"
              COLON ":"
              TYPE_PATTERN
                TYPE_EXPR "void"
                  WORD "void"
          EQUALS "="
          INTEGER_LITERAL "1"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            CHAIN_PATTERN
              BINDING_PATTERN "let y"
                KW_LET "let"
                WORD "y"
              COLON ":"
              TYPE_PATTERN
                TYPE_EXPR "void"
                  WORD "void"
          EQUALS "="
          BLOCK_EXPR
            L_BRACE "{"
            LET_STMT
              PATTERN
                CHAIN_PATTERN
                  BINDING_PATTERN "// this should still be an error
    let z"
                    KW_LET "let"
                    WORD "z"
                  COLON ":"
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
              EQUALS "="
              STRING_LITERAL "string"
                QUOTE """
                WORD "string"
                QUOTE """
              SEMICOLON ";"
            WORD "z"
            R_BRACE "}"
          SEMICOLON ";"
        INTEGER_LITERAL "1"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "bad_optional"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "void?"
      WORD "void"
      QUESTION "?"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR "{
  null
}"
        L_BRACE "{"
        WORD "null"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "bad_list"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "void[]"
      WORD "void"
      L_BRACKET "["
      R_BRACKET "]"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        ARRAY_LITERAL "[]"
          L_BRACKET "["
          R_BRACKET "]"
        R_BRACE "}"

=== ERRORS ===
None
